--- a/Salvation/war/WEB-INF/web.xml
+++ b/Salvation/war/WEB-INF/web.xml
@@ -1,33 +1,38 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?><web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee                http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-  <!-- Servlets -->
-  <servlet>
-    <servlet-name>defenceServiceImpl</servlet-name>
-    <servlet-class>org.elsys.salvation.server.DefenceServiceImpl</servlet-class>
-  </servlet>
+	<!-- Servlets -->
+	<servlet>
+		<servlet-name>defenceServiceImpl</servlet-name>
+		<servlet-class>org.elsys.salvation.server.DefenceServiceImpl</servlet-class>
+	</servlet>
 
-  <servlet-mapping>
-    <servlet-name>defenceServiceImpl</servlet-name>
-    <url-pattern>/salvation/defences</url-pattern>
-  </servlet-mapping>
-  
-  <!-- Default page to serve -->
-  <welcome-file-list>
-    <welcome-file>Salvation.html</welcome-file>
-  </welcome-file-list>
+	<servlet-mapping>
+		<servlet-name>defenceServiceImpl</servlet-name>
+		<url-pattern>/salvation/defences</url-pattern>
+	</servlet-mapping>
 
-  <servlet>
-    <servlet-name>SystemServiceServlet</servlet-name>
-    <servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
-    <init-param>
-      <param-name>services</param-name>
-      <param-value/>
-    </init-param>
-  </servlet>
+	<!-- Default page to serve -->
+	<welcome-file-list>
+		<welcome-file>Salvation.html</welcome-file>
+	</welcome-file-list>
 
-  <servlet-mapping>
-    <servlet-name>SystemServiceServlet</servlet-name>
-    <url-pattern>/_ah/spi/*</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>SystemServiceServlet</servlet-name>
+		<servlet-class>com.google.api.server.spi.SystemServiceServlet</servlet-class>
+		<init-param>
+			<param-name>services</param-name>
+			<param-value/>
+		</init-param>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>SystemServiceServlet</servlet-name>
+		<url-pattern>/_ah/spi/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>defenceServiceImpl</servlet-name>
+		<url-pattern>/Salvation/Salvation</url-pattern>
+	</servlet-mapping>
 
 </web-app>
